Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-# Hello, world!
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
+    <title>Weiht.GitHub.io by weiht</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1>Weiht.GitHub.io</h1>
+        <h2></h2>
+
+        <section id="downloads">
+          <a href="https://github.com/weiht" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <h3>
+<a id="欢迎来到猫叔的狡窟" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E6%9D%A5%E5%88%B0%E7%8C%AB%E5%8F%94%E7%9A%84%E7%8B%A1%E7%AA%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>欢迎来到猫叔的狡窟</h3>
+
+<p>狡猫三窟，这是我的又一个小窝。你有兴趣么？一起来搭建吧。</p>
+
+<h3>
+<a id="联系方式" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%96%B9%E5%BC%8F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系方式</h3>
+
+<p>QQ：25457495</p>
+      </section>
+    </div>
+
+    
+  </body>
+</html>
