--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
+---
+---
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
+    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Weiht.GitHub.io by weiht</title>
+    <title>{{page.title}}</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Weiht.GitHub.io</h1>
+        <h1>{{page.layout}}</h1>
         <h2></h2>
 
         <section id="downloads">
