Fixed problem in the config yaml file.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header>
       <div class="container">
-        <h1>{{page.layout}}</h1>
+        <h1>{{page.title}}</h1>
         <h2></h2>
 
         <section id="downloads">
@@ -30,14 +30,15 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="欢迎来到猫叔的狡窟" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E6%9D%A5%E5%88%B0%E7%8C%AB%E5%8F%94%E7%9A%84%E7%8B%A1%E7%AA%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>欢迎来到猫叔的狡窟</h3>
+<a id="欢迎来到猫叔的狡窟" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E6%9D%A5%E5%88%B0%E7%8C%AB%E5%8F%94%E7%9A%84%E7%8B%A1%E7%AA%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>欢迎来到{{page.title}}</h3>
 
 <p>狡猫三窟，这是我的又一个小窝。你有兴趣么？一起来搭建吧。</p>
 
 <h3>
-<a id="联系方式" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%96%B9%E5%BC%8F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>联系方式</h3>
+<a id="联系方式" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%96%B9%E5%BC%8F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>{{page.nick}}的联系方式</h3>
 
 <p>QQ：25457495</p>
+<p>Tel：12345678901</p>
       </section>
     </div>
 
