Added including tests.

--- a/index.html
+++ b/index.html
@@ -3,21 +3,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-
-    <title>{{page.title}}</title>
+{% include styles.html %}
   </head>
 
   <body>
 
     <header>
-      <div class="container">
+      <div class="container narrow">
         <h1>{{page.title}}</h1>
         <h2></h2>
 
@@ -27,7 +19,7 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="container narrow">
       <section id="main_content">
         <h3>
 <a id="欢迎来到猫叔的狡窟" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E6%9D%A5%E5%88%B0%E7%8C%AB%E5%8F%94%E7%9A%84%E7%8B%A1%E7%AA%9F" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>欢迎来到{{page.title}}</h3>
