--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
       </section>
     </div>
 
+    <div class="container narrow">
+    <ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
+    </div>
+
     
   </body>
 </html>
